--- a/src/styles/Pad.css
+++ b/src/styles/Pad.css
@@ -1,4 +1,4 @@
-/* DraggableResizableSquare.css */
+/* Pad.css */
 .draggable-square {
   position: absolute;
   background-color: rgba(0, 150, 255, 0.5);
